--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Product Reviews - Guitar Shop</title>
+    <title>Product Reviews - Rudy's Music</title>
     <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
     <style>
@@ -87,7 +87,7 @@
 <body>
 
     <header>
-        <div class="logo">Guitar Shop</div>
+        <div class="logo">Rudy's Music</div>
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
         <nav id="navbar">
             <ul>
@@ -104,49 +104,49 @@
 
             <!-- Existing Reviews -->
             <div class="review">
-                <h3>John M.</h3>
+                <h3>John M. from USA</h3>
                 <div class="rating">★★★★★</div>
                 <p>This is the best Stratocaster I’ve ever played. Amazing sound and build quality!</p>
             </div>
 
             <div class="review">
-                <h3>Sarah L.</h3>
+                <h3>Sarah L. from UK</h3>
                 <div class="rating">★★★★☆</div>
                 <p>The Telecaster is great, but I wish it came with a hard case. Otherwise, perfect!</p>
             </div>
 
             <div class="review">
-                <h3>Michael T.</h3>
+                <h3>Michael T. from Germany</h3>
                 <div class="rating">★★★★★</div>
                 <p>The Thunderbird Bass is everything I expected. The sustain and tone are fantastic on stage.</p>
             </div>
 
             <div class="review">
-                <h3>Emily R.</h3>
+                <h3>Emily R. from USA</h3>
                 <div class="rating">★★★★★</div>
                 <p>Super fast shipping and the Ibanez I bought feels premium! Highly recommend this shop.</p>
             </div>
 
             <div class="review">
-                <h3>Daniel K.</h3>
+                <h3>Daniel K. from USA</h3>
                 <div class="rating">★★★☆☆</div>
                 <p>Great guitar but it had some minor scratches on arrival. Customer service was very responsive.</p>
             </div>
 
             <div class="review">
-                <h3>Jessica B.</h3>
+                <h3>Jessica B. from Australia</h3>
                 <div class="rating">★★★★☆</div>
                 <p>The Gibson Les Paul sounds amazing but was a bit heavier than I expected.</p>
             </div>
 
             <div class="review">
-                <h3>Steven C.</h3>
+                <h3>Steven C. from Canada</h3>
                 <div class="rating">★★★★★</div>
                 <p>Love my new Fender Player Stratocaster! Smooth neck and great tone right out of the box.</p>
             </div>
 
             <div class="review">
-                <h3>Amanda F.</h3>
+                <h3>Julien F. from USA</h3>
                 <div class="rating">★★★★★</div>
                 <p>Perfect experience. I got the exact model I was looking for and it arrived quickly!</p>
             </div>
