--- a/Fender Squier Classic Vibe 60s Stratocaster.html
+++ b/Fender Squier Classic Vibe 60s Stratocaster.html
@@ -35,9 +35,9 @@
 
             <div class="product-images">
                 <img src="images/Fender Squier Classic Vibe '60s Stratocaster.jpeg" alt="Fender Squier Classic Vibe 60s Stratocaster" />
-                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-1.webp" alt="Fender Squier Classic Vibe 60s Stratocaster-1" />
-                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-2.webp" alt="Fender Squier Classic Vibe 60s Stratocaster-2" />
-                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-3.webp" alt="Fender Squier Classic Vibe 60s Stratocaster-3" />
+                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-1.jpg" alt="Fender Squier Classic Vibe 60s Stratocaster-1" />
+                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-2.jpg" alt="Fender Squier Classic Vibe 60s Stratocaster-2" />
+                <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-3.jpg" alt="Fender Squier Classic Vibe 60s Stratocaster-3" />
             </div>
 
             <p class="price">Price: $250</p>
