--- a/Gibson Les Paul Tribute.html
+++ b/Gibson Les Paul Tribute.html
@@ -32,10 +32,10 @@
             </p>
 
             <div class="product-images">
-                <img src="images/Gibson Les Paul Tribute.jpg" alt="Gibson Les Paul Tribute">
-                <img src="gibsondetails/Gibson Les Paul Tribute-1.webp" alt="Gibson Les Paul Tribute-1">
+                <img src="images/Gibson Les Paul Tribute.webp" alt="Gibson Les Paul Tribute">
+                <img src="gibsondetails/Gibson Les Paul Tribute-1.jpg" alt="Gibson Les Paul Tribute-1">
                 <img src="gibsondetails/Gibson Les Paul Tribute-2.jpg" alt="Gibson Les Paul Tribute-2">
-                <img src="gibsondetails/Gibson Les Paul Tribute-3.jpeg" alt="Gibson Les Paul Tribute-3">
+                <img src="gibsondetails/Gibson Les Paul Tribute-3.jpg" alt="Gibson Les Paul Tribute-3">
             </div>
 
             <p class="price">Price: $900</p>
