--- a/product-es-335.html
+++ b/product-es-335.html
@@ -33,7 +33,7 @@
                 <img src="images/ES-335.png" alt="ES-335" />
                 <img src="gibsondetails/ES-335-1.webp" alt="ES-335 Detail 1" />
                 <img src="gibsondetails/ES-335-2.jpg" alt="ES-335 Detail 2" />
-                <img src="gibsondetails/ES-335-3.jpeg" alt="ES-335 Detail 3" />
+                <img src="gibsondetails/ES-335-3.webp" alt="ES-335 Detail 3" />
             </div>
 
             <p class="price">Price: $3,500</p>
