--- a/product-precision-american.html
+++ b/product-precision-american.html
@@ -31,7 +31,7 @@
                 <img src="images/Fender Precision Bass American Professional II Series.jpeg" alt="Precision Bass American" />
                 <img src="fenderdetails/Precision Bass (American Professional II Series)-1.jpg" alt="Precision Bass Detail 1" />
                 <img src="fenderdetails/Precision Bass (American Professional II Series)-2.jpg" alt="Precision Bass Detail 2" />
-                <img src="fenderdetails/Precision Bass (American Professional II Series)-3.webp" alt="Precision Bass Detail 3" />
+                <img src="fenderdetails/Precision Bass (American Professional II Series)-3.jpg" alt="Precision Bass Detail 3" />
             </div>
             <p class="price">Price: $2,000</p>
             <button class="add-to-cart" onclick="addToCart('Precision Bass (American Professional II Series)', 2000)">Add to Cart</button>
