--- a/product-stratocaster-player.html
+++ b/product-stratocaster-player.html
@@ -30,8 +30,8 @@
       <div class="product-images">
         <img src="images/stratocaster (Player Series).jpg" alt="Stratocaster Player" />
         <img src="fenderdetails/Stratocaster (Player Series)-1.webp" alt="Stratocaster Detail 1" />
-        <img src="fenderdetails/Stratocaster (Player Series)-2.webp" alt="Stratocaster Detail 2" />
-        <img src="fenderdetails/Stratocaster (Player Series)-3.webp" alt="Stratocaster Detail 3" />
+        <img src="fenderdetails/Stratocaster (Player Series)-2.jpg" alt="Stratocaster Detail 2" />
+        <img src="fenderdetails/Stratocaster (Player Series)-3.jpg" alt="Stratocaster Detail 3" />
       </div>
       <p class="price">Price: $700</p>
       <button class="add-to-cart" onclick="addToCart('Stratocaster (Player Series)', 700)">Add to Cart</button>
