--- a/product-telecaster-player.html
+++ b/product-telecaster-player.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Telecaster (American Professional II Series) - Details</title>
+    <title>Telecaster (Player Series) - Details</title>
     <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
@@ -23,45 +23,43 @@
 
   <main>
     <div class="product-detail">
-      <h1>Telecaster (American Professional II Series)</h1>
+      <h1>Telecaster (Player Series)</h1>
       <p class="product-description">
-        Designed for the modern guitarist, this Telecaster combines timeless style with next-generation performance. It delivers crystal-clear tones and exceptional sustain.
+        The Telecaster Player Series brings classic Fender style and tone to modern players. Known for its punchy sound, smooth playability, and versatile performance, this Tele is ready for any stage.
       </p>
       <div class="product-images">
-        <img src="images/Telecaster (American Professional II Series).jpg" alt="Telecaster American" />
-        <img src="fenderdetails/Telecaster (American Professional II Series)-1.webp" alt="Telecaster Detail 1" />
-        <img src="fenderdetails/Telecaster (American Professional II Series)-2.webp" alt="Telecaster Detail 2" />
-        <img src="fenderdetails/Telecaster (American Professional II Series)-3.webp" alt="Telecaster Detail 3" />
+        <img src="images/Telecaster (Player Series).webp" alt="Telecaster Player Series" />
+        <img src="fenderdetails/Telecaster (Player Series)-1.jpeg" alt="Telecaster Detail 1" />
+        <img src="fenderdetails/Telecaster (Player Series)-2.jpg" alt="Telecaster Detail 2" />
+        <img src="fenderdetails/Telecaster (Player Series)-3.jpg" alt="Telecaster Detail 3" />
       </div>
-      <p class="price">Price: $1,900</p>
-      <button class="add-to-cart" onclick="addToCart('Telecaster (American Professional II Series)', 1900)">Add to Cart</button>
+      <p class="price">Price: $700</p>
+      <button class="add-to-cart" onclick="addToCart('Telecaster (Player Series)', 700)">Add to Cart</button>
 
       <section>
         <h2>Key Features</h2>
         <ul class="features-list">
-          <li>American Professional II Tele single-coil pickups for crisp tone</li>
-          <li>Modern "Deep C" maple neck with rolled fingerboard edges</li>
-          <li>22 medium jumbo frets for smooth playability</li>
-          <li>Two-point tremolo bridge with bent steel saddles</li>
-          <li>Classic ash or alder body with gloss finish</li>
-          <li>Deluxe tuning machines for precise tuning stability</li>
-          <li>Perfect balance of vintage vibe and modern playability</li>
+          <li>Player Series Alnico V Tele single-coil pickups for bright, punchy tones</li>
+          <li>Modern "C" maple neck for comfortable, fast playability</li>
+          <li>6-saddle string-through-body bridge for solid tuning and sustain</li>
+          <li>22 medium jumbo frets for smooth bending and extended range</li>
+          <li>Classic alder body with gloss polyester finish</li>
         </ul>
       </section>
 
       <section>
         <h2>Specifications</h2>
         <table class="specs-table">
-          <tr><th>Body</th><td>Ash or Alder (depending on finish)</td></tr>
-          <tr><th>Neck</th><td>Maple, Modern "Deep C" Shape</td></tr>
-          <tr><th>Fingerboard</th><td>Rosewood or Maple, 22 Medium Jumbo Frets</td></tr>
-          <tr><th>Pickups</th><td>American Professional II Tele Single-Coil</td></tr>
-          <tr><th>Bridge</th><td>2-Point Tremolo with Bent Steel Saddles</td></tr>
-          <tr><th>Hardware</th><td>Deluxe Tuning Machines</td></tr>
+          <tr><th>Body</th><td>Alder</td></tr>
+          <tr><th>Neck</th><td>Maple, Modern "C" Shape</td></tr>
+          <tr><th>Fingerboard</th><td>Maple or Pau Ferro, 22 Medium Jumbo Frets</td></tr>
+          <tr><th>Pickups</th><td>Player Series Alnico V Tele Single-Coil</td></tr>
+          <tr><th>Bridge</th><td>6-Saddle String-Through-Body Tele Bridge</td></tr>
+          <tr><th>Hardware</th><td>Standard Sealed Tuners</td></tr>
           <tr><th>Scale Length</th><td>25.5 inches (648 mm)</td></tr>
           <tr><th>Finish</th><td>Gloss Polyester</td></tr>
-          <tr><th>Colors Available</th><td>Butterscotch Blonde, Mystic Seafoam, Sonic Gray</td></tr>
-          <tr><th>Weight</th><td>Approx. 8.2 lbs</td></tr>
+          <tr><th>Colors Available</th><td>Butterscotch Blonde, Tidepool, 3-Color Sunburst</td></tr>
+          <tr><th>Weight</th><td>Approx. 8 lbs</td></tr>
         </table>
       </section>
     </div>
