--- a/products.html
+++ b/products.html
@@ -336,7 +336,7 @@ footer {
                 </div>
                 <div class="product-card">
                     <a href="Gibson Les Paul Tribute.html">
-                        <img src="images/Gibson Les Paul Tribute.jpg" alt="Gibson Les Paul Tribute">
+                        <img src="images/Gibson Les Paul Tribute.webp" alt="Gibson Les Paul Tribute">
                     </a>
                     <h3>Gibson Les Paul Tribute</h3>
                     <p>$900</p>
@@ -496,7 +496,7 @@ footer {
             <div class="product-grid">
                 <div class="product-card">
                     <a href="product-sr-gio.html">
-                        <img src="images/Ibanez SR Series Gio.webp" alt="SR Series Gio">
+                        <img src="images/SR Series (Gio-Standard).webp" alt="SR Series Gio">
                     </a>
                     <h3>SR (Soundgear) Series (Gio/Standard)</h3>
                     <p>$200</p>
