--- a/product-les-paul-standard.html
+++ b/product-les-paul-standard.html
@@ -31,7 +31,7 @@
                 <img src="images/Les Paul Standard (50s-60s)1.webp" alt="Les Paul Standard" />
                 <img src="gibsondetails/Les Paul Standard (50s-60s)-1.webp" alt="Les Paul Detail 1" />
                 <img src="gibsondetails/Les Paul Standard (50s-60s)-2.webp" alt="Les Paul Detail 2" />
-                <img src="gibsondetails/Les Paul Standard (50s-60s)-3.webp" alt="Les Paul Detail 3" />
+                <img src="gibsondetails/Les Paul Standard (50s-60s)-3.jpg" alt="Les Paul Detail 3" />
             </div>
             <p class="price">Price: $2,800</p>
             <button class="add-to-cart" onclick="addToCart('Les Paul Standard (50s/60s)', 2800)">Add to Cart</button>
