--- a/product-precision-player.html
+++ b/product-precision-player.html
@@ -30,7 +30,7 @@
         <div class="product-images">
             <img src="images/Fender Precision Bass Player Series.webp" alt="Precision Bass Player" />
             <img src="fenderdetails/Precision Bass (Player Series)-1.jpg" alt="Precision Bass Detail 1" />
-            <img src="fenderdetails/Precision Bass (Player Series)-2.webp" alt="Precision Bass Detail 2" />
+            <img src="fenderdetails/Precision Bass (Player Series)-2.jpg" alt="Precision Bass Detail 2" />
             <img src="fenderdetails/Precision Bass (Player Series)-3.jpg" alt="Precision Bass Detail 3" />
         </div>
         <p class="price">Price: $900</p>
