--- a/product-sr-gio.html
+++ b/product-sr-gio.html
@@ -28,10 +28,10 @@
         Lightweight and fast, the SR Series Gio is perfect for beginner bassists, offering punchy tones and a sleek, comfortable design.
       </p>
       <div class="product-images">
-        <img src="images/Ibanez SR Series Gio.webp" alt="SR Series Gio" />
+        <img src="images/SR Series (Gio-Standard).webp" alt="SR Series Gio" />
         <img src="ibanezdetails/SR Series (Gio-Standard)-1.jpg" alt="SR Gio Detail 1" />
-        <img src="ibanezdetails/SR Series (Gio-Standard)-2.webp" alt="SR Gio Detail 2" />
-        <img src="ibanezdetails/SR Series (Gio-Standard)-3.jpg" alt="SR Gio Detail 3" />
+        <img src="ibanezdetails/SR Series (Gio-Standard)-2.jpg" alt="SR Gio Detail 2" />
+        <img src="ibanezdetails/SR Series (Gio-Standard)-3.webp" alt="SR Gio Detail 3" />
       </div>
       <p class="price">Price: $200</p>
       <button class="add-to-cart" onclick="addToCart('SR Series (Gio/Standard)', 200)">Add to Cart</button>
