--- a/product-telecaster-american.html
+++ b/product-telecaster-american.html
@@ -31,7 +31,7 @@
                 <img src="images/Telecaster (American Professional II Series).jpg" alt="Telecaster American">
                 <img src="fenderdetails/Telecaster (American Professional II Series)-1.webp" alt="Telecaster Detail 1">
                 <img src="fenderdetails/Telecaster (American Professional II Series)-2.webp" alt="Telecaster Detail 2">
-                <img src="fenderdetails/Telecaster (American Professional II Series)-3.webp" alt="Telecaster Detail 3">
+                <img src="fenderdetails/Telecaster (American Professional II Series)-3.jpg" alt="Telecaster Detail 3">
             </div>
             <p class="price">Price: $1,900</p>
             <button class="add-to-cart" onclick="addToCart('Telecaster (American Professional II Series)', 1900)">Add to Cart</button>
