--- a/product-thunderbird-bass.html
+++ b/product-thunderbird-bass.html
@@ -30,8 +30,8 @@
       <div class="product-images">
         <img src="images/Gibson Thunderbird Bass.jpeg" alt="Thunderbird Bass" />
         <img src="gibsondetails/Thunderbird Bass-1.jpg" alt="Thunderbird Bass Detail 1" />
-        <img src="gibsondetails/Thunderbird Bass-2.webp" alt="Thunderbird Bass Detail 2" />
-        <img src="gibsondetails/Thunderbird Bass-3.jpeg" alt="Thunderbird Bass Detail 3" />
+        <img src="gibsondetails/Thunderbird Bass-2.jpg" alt="Thunderbird Bass Detail 2" />
+        <img src="gibsondetails/Thunderbird Bass-3.jpg" alt="Thunderbird Bass Detail 3" />
       </div>
       <p class="price">Price: $2,500</p>
       <button class="add-to-cart" onclick="addToCart('Thunderbird Bass', 2500)">Add to Cart</button>
